--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "react-typed": "^1.2.0",
     "typed.js": "^2.0.11"
   },
