--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "server",
+  "name": "mongoose-graphql",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "dev": "nodemon --exec npx babel-node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "apollo-server": "^2.13.1",
+    "graphql": "^15.0.0",
+    "graphql-tools": "^5.0.0",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.14"
+  },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
-    "eslint": "^7.1.0",
+    "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
@@ -22,12 +32,5 @@
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1"
-  },
-  "dependencies": {
-    "apollo-server": "^2.13.1",
-    "dotenv": "^8.2.0",
-    "graphql": "^15.0.0",
-    "ioredis": "^4.17.1",
-    "mongoose": "^5.9.16"
   }
 }
