--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand ./test",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "dev": "nodemon --exec npx babel-node src/index.js"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.13.1",
+    "apollo-server-testing": "^2.14.1",
     "graphql": "^15.0.0",
     "graphql-tools": "^5.0.0",
     "lodash": "^4.17.15",
@@ -30,6 +34,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1"
   }
