--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
-    "graphql": "^15.1.0",
     "nodemailer": "^6.4.8"
   }
 }
