--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-particles-js": "^3.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
+    "react-slick": "^0.26.1",
     "react-typed": "^1.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
